@@ -60,7 +60,7 @@
     <aeron.version>1.52.2</aeron.version>
     <agrona.version>2.5.0</agrona.version>
     <sbe.version>1.39.0</sbe.version>
-    <netty.version>4.2.17.Final</netty.version>
+    <netty.version>4.2.18.Final</netty.version>
     <rsocket.version>1.1.5</rsocket.version>
     <jackson.version>2.22.1</jackson.version>
     <reactor.version>2024.0.8</reactor.version>
@@ -470,6 +470,7 @@
             -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
             --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
             --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+            --enable-native-access=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
